--- a/MevetProject/rental_ads/static/rental_ads/css/style_menu.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_menu.css
@@ -114,6 +114,7 @@ header {
 .bottom-text{
     font-size: 13px;
     font-family: 'Century Gothic', sans-serif;
+    font-weight: normal;
 }
 
 /*Форма Логина и регистрации*/
