--- a/MevetProject/rental_ads/static/rental_ads/css/rentals_categories.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/rentals_categories.css
@@ -40,6 +40,7 @@
     margin-left:6%;
 }
 
+
 .form-wrapper {
     text-align: right;
     margin-left: auto;
@@ -155,8 +156,43 @@
     border: 1px solid red;
 }
 
-.testtt{
- color: red;
+
+
+
+
+.centered-h11 {
+    flex-grow: 1;
+    text-align: center;
+
+    font-size: 22px;
+    text-align: center;
 }
 
+.title-filter-top-favorites {
+    margin-left: 3%;
+    margin-right: 3%;
+    display: flex;
+    flex-grow: 1;
 
+}
+
+.ride11 {
+    display: flex;
+    text-align: left;
+}
+
+.ride11 p {
+    padding: 10px;
+    color: gray;
+    font-size: 20px;
+    cursor: pointer;
+    margin-left: 3%;
+}
+
+.ride11 p:hover {
+    color: black;
+}
+
+.ride11 p.active {
+    color: black;
+}
