--- a/MevetProject/rental_ads/templates/base.html
+++ b/MevetProject/rental_ads/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'rental_ads/css/style_osnov.css' %}">
     <link rel="stylesheet" href="{% static 'rental_ads/css/rentals_categories.css' %}">
     <link rel="stylesheet" href="{% static 'rental_ads/css/index_rental.css' %}">
+    <link rel="stylesheet" href="{% static 'rental_ads/css/rental_manage.css' %}">
     <link href="https://fonts.cdnfonts.com/css/century-gothic?styles=24895" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -31,26 +32,30 @@
             <img src="{% static 'rental_ads/img/logo.png' %}" alt="Логотип">
         </div>
         <div class="right">
-                <a href="{% url 'messages' %}" class="far fa-envelope"></a>
+
             {% if user.is_authenticated %}
+                <a href="{% url 'messages' %}" class="far fa-envelope"></a>
                 <a href="/rental_manage" class="fa-regular fa-user"></a>
-            {% else %}
-                <a href="#blackout-login" class="fa-regular fa-user"></a>
-            {% endif %}
                 <a href="/favorites" class="fa-regular fa-heart"></a>
+            {% else %}
+                <a href="#blackout-login" class="far fa-envelope"></a>
+                <a href="#blackout-login" class="fa-regular fa-user"></a>
+                <a href="#blackout-login" class="fa-regular fa-heart"></a>
+            {% endif %}
+
         </div>
     </div>
     <div class="bottom">
         {% with request.path|lower|slice:":-1" as current_path %}
             <a href="/" class="fa-regular fas far far fa-compass" style="background: {% if '' == current_path %}  white;
       color: black;{% endif %}"><font class="bottom-text"> Главная страница</font></a>
-            <a href="/conferences" class="fa-regular fas fa-photo" style="background: {% if '/conferences' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Конференции</font></a>
+            <a href="/conferences" class="fas fa-mug-hot" style="background: {% if '/conferences' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Конференции</font></a>
             <a href="/wedding" class="fa-regular fas fa-gift" style="background: {% if '/wedding' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Свадьбы</font></a>
             <a href="/birthday" class="fa-regular fas fa-glass-cheers" style="background: {% if '/birthday' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Дни рождения</font></a>
-            <a href="/room" class="fa-regular fas fa-video" style="background: {% if '/room' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Помещения</font></a>
-            <a href="/corporate" class="fa-regular fas fa-guitar" style="background: {% if '/corporate' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Корпоративы</font></a>
+            <a href="/room" class="far fa-building" style="background: {% if '/room' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Помещения</font></a>
+            <a href="/corporate" class="fas fa-pizza-slice" style="background: {% if '/corporate' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Корпоративы</font></a>
             <a href="/concerts" class="fa-regular fas fa-guitar" style="background: {% if '/concerts' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Концерты</font></a>
-            <a href="/other" class="fa-regular fas fa-guitar" style="background: {% if '/other' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Другие</font></a>
+            <a href="/other" class="far fa-grin-beam-sweat" style="background: {% if '/other' == current_path %} white; color: black; {% endif %}"><font class="bottom-text"> Другие</font></a>
         {% endwith %}
     </div>
 </header>
