--- a/MevetProject/rental_ads/templates/rental_manage.html
+++ b/MevetProject/rental_ads/templates/rental_manage.html
@@ -31,6 +31,8 @@
 
 <div class="button-change">
     <a href="/add_rental" class="add-rental-button far fa-folder-open " style="font-size: 18px;"> <font style="font-family: 'Century Gothic', sans-serif;">Добавить Объявление</font></a>
+    <a href="{% url 'logout' %}" class="exit-rental-button fas fa-sign-in-alt" style="font-size: 18px; margin-left:1%;"><font style="font-family: 'Century Gothic', sans-serif; font-weight: normal;"> Выйти из аккаунта</font></a>
+
 </div>
 
 <br>
