--- a/MevetProject/rental_ads/templates/base.html
+++ b/MevetProject/rental_ads/templates/base.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="{% static 'rental_ads/css/index_rental.css' %}">
     <link rel="stylesheet" href="{% static 'rental_ads/css/rental_manage.css' %}">
     <link rel="stylesheet" href="{% static 'rental_ads/css/message_rental.css' %}">
+    <link rel="stylesheet" href="{% static 'rental_ads/css/rental_add_edit_manage.css' %}">
+    <link rel="stylesheet" href="{% static 'rental_ads/css/rentals_detail.css' %}">
     <link href="https://fonts.cdnfonts.com/css/century-gothic?styles=24895" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
