--- a/MevetProject/rental_ads/templates/rental_detail.html
+++ b/MevetProject/rental_ads/templates/rental_detail.html
@@ -1,59 +1,74 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
+<div class="backpho">
+    <img src="{{ rental.main_image.url }}" class="photoback">
+</div>
 <div class="Osn">
     <div class="oneP">
         {% if rental.main_image %}
-        <img src="{{ rental.main_image.url }}" class="main_img_rental_detail">
+            <img src="{{ rental.main_image.url }}" class="main_img_rental_detail">
         {% endif %}
         <div class="dynamic">
             {% for image in rental.images.all %}
-            <img src="{{ image.image.url }}" class="rental_img_rental_detail">
+                <img src="{{ image.image.url }}" class="rental_img_rental_detail">
             {% endfor %}
+        </div>
+        <br>
+        <div class="twoPob" style="width: 90%;">
+            {% if user.is_authenticated %}
+                <p class="spc" style="margin-bottom: 2%;">Отправить сообщение продавцу:</p>
+                <form method="post" action="{% url 'send_message' rental_id=rental.id %}">
+                    {% csrf_token %}
+                    <textarea class="textarea-detail" name="message" placeholder=""></textarea>
+                    <button type="submit" class="button-textarea-detail">Отправить</button>
+                </form>
+            {% else %}
+                <p class="spc">Войдите в аккаунт, чтобы отправлять сообщения</p>
+            {% endif %}
+        </div>
+        <br>
+        <div class="twoPob" style="width: 90%;">
+            <p class="spc">Описание:</p>
+            <p>{{ rental.description }}</p>
         </div>
     </div>
 
     <div class="twoP">
-        <h1>{{ rental.title }}</h1>
+        <div class="twoPob">
+            <h1>{{ rental.title }}</h1>
+            <p class="spc">Цена:</p>
+            <p class="cpf">{{ rental.price }} ₽</p>
+            {% if request.user.is_authenticated %}
+                {% with is_favorite=rental.is_favorite %}
+                    {% if is_favorite %}
+                        <button data-favorite-id="{{ rental.id }}" class="delete-from-favorites fa-regular fa-heart favorite-button " style="font-size: 16px; margin-left:-1.3%;" >
+                         <font style="font-family: 'Century Gothic', sans-serif;"> Удалить из избранного</font>
+                        </button>
+                    {% else %}
+                        <button data-favorite-id="{{ rental.id }}" class="add-to-favorites favorite-button fa-regular fa-heart" style="font-size: 16px; margin-left:-1.3%;">
+                        <font style="font-family: 'Century Gothic', sans-serif;">Добавить в избранное</font>
+                        </button>
+                    {% endif %}
+                {% endwith %}
+            {% else %}
+                <button data-favorite-id="{{ rental.id }}" class="add-to-favorites favorite-button fa-regular fa-heart" style="font-size: 16px; margin-left:-1.3%;">
+                        <font style="font-family: 'Century Gothic', sans-serif;">Добавить в избранное</font>
+                        </button>
+            {% endif %}
+            <br>
+            <br>
+        </div>
         <br>
-        <p class="spc">Цена:</p>
-        <p>{{ rental.price }} ₽</p>
-        <br>
-        <p class="spc">Связь с организатором:</p>
-        <p>{{ rental.contact }}</p>
-        <br>
-        <p class="spc">Местоположение:</p>
-        <p>{{ rental.address }}</p>
-        <br>
-        <button class="add-to-favorites-rental fa-regular fa-heart " style="font-size: 20px;"> Добавить в избранное</button>
-        <br>
-        <br>
-
-
-        {% if user.is_authenticated %}
-        <p class="spc">Отправить сообщение продавцу:</p>
-        <form method="post" action="{% url 'send_message' rental_id=rental.id %}">
-            {% csrf_token %}
-        <textarea class="textarea-detail" name="message" placeholder=""></textarea>
-
-
-            <button type="submit" class="button-textarea-detail">Отправить</button>
-        </form>
-        {% endif %}
+        <div class="twoPob">
+            <p class="spc">Связь с организатором:</p>
+            <p class="cpf" style="padding-bottom: 2%;">{{ rental.contact }}</p>
+            <p class="spc">Местоположение:</p>
+            <p class="cpf" style="padding-bottom: 2%;">{{ rental.address }}</p>
+        </div>
     </div>
-
 </div>
-<div class="threeP">
-    <h2>Описание:</h2>
-    <p>{{ rental.description }}</p>
-
-
 </div>
-
-
-
-
-
 <script>
   // выбираем все изображения на странице
   const images = document.querySelectorAll('img');
@@ -91,8 +106,49 @@
       });
     });
   });
+</script>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('.favorite-button').click(function() {
+            var favoriteId = $(this).data('favorite-id');
+            var url;
+            var isFavorite = $(this).hasClass('delete-from-favorites');
+            if (isFavorite) {
+                url = '/favorites/remove/' + favoriteId + '/';
+            } else {
+                url = '/favorites/add/' + favoriteId + '/';
+            }
+            var favoriteButton = $(this);
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: {
+                    'csrfmiddlewaretoken': '{{ csrf_token }}'
+                },
+                success: function() {
+                    if (isFavorite) {
+                        favoriteButton.removeClass('delete-from-favorites').addClass('add-to-favorites');
+                        favoriteButton.find('font').text('Добавить в избранное');
+                        alert("Удалено из избранного");
+                    } else {
+                        favoriteButton.removeClass('add-to-favorites').addClass('delete-from-favorites');
+                        favoriteButton.find('font').text('Удалить из избранного');
+                        alert("Добавлено в избранное");
+                    }
+                },
+                error: function(){
+                    if (isFavorite) {
+                        alert("Произошла ошибка при удалении объявления из избранного");
+                    } else {
+                        alert("Произошла ошибка при добавлении объявления в избранное Войдите в аккаунт");
+                    }
+                }
+            });
+            return false;
+        });
+    });
 </script>
 
 {% endblock %}
