--- a/MevetProject/rental_ads/static/rental_ads/css/rentals_categories.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/rentals_categories.css
@@ -75,6 +75,7 @@
     width: 30%;
     height: 440px;
     margin: 1%;
+    border-radius: 15px;
     margin-bottom: 6px;
     transition: 0.3s;
 }
@@ -84,11 +85,13 @@
     /*border-radius: 0px 0px 15px 15px;*/
     opacity: 95%;
     transform: translateY(-10px);
+    border-radius: 15px;
 }
 
 .rental-item img {
     width: 100%;
     height: 70%;
+    border-radius: 15px;
     object-fit: cover;
     margin-bottom: 3px;
 }
