--- a/MevetProject/rental_ads/static/rental_ads/css/rentals_detail.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/rentals_detail.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 /* Rental detail */
 
+
  .backpho {
         position: fixed;
         top: 0;
@@ -34,7 +35,7 @@
 .Osn {
     margin: 2%;
     display: flex;
-    width: 90%;
+    width: 95%;
 
 
 }
@@ -66,7 +67,7 @@
     padding:3%;
     width: 100%;
 
-    box-shadow: 0px 10px 15px gray;
+
 }
 
 .twoP h1{
@@ -82,9 +83,10 @@
 /*main картинка*/
 .main_img_rental_detail {
     cursor: pointer;
-    border: solid 2px gray;
-	width: 91.1%;
+
+	width: 90%;
 	transition:width 0.5s ease;
+	border-radius: 15px;
 }
 
 .dinamic {
@@ -93,9 +95,12 @@
 /*rental картинки*/
 .rental_img_rental_detail {
     cursor: pointer;
-    border: solid 2px gray;
-    width: 30%;
+    margin-top: 0.5%;
+    width: 29.6%;
+    height: 150px;
+    object-fit: cover;
 	transition:width 0.5s ease;
+	border-radius: 15px;
 }
 
 
