--- a/MevetProject/rental_ads/static/rental_ads/css/index_rental.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/index_rental.css
@@ -1,15 +1,15 @@
-/*Главная страница*/
-
 .video-bg {
-    margin-top:-7%;
+    margin-top: -8.35%;
     height: 100vh;
     width: 100%;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: fixed;
+    z-index: -2;
 }
+
 .video-bg video {
     position: absolute;
     top: 0;
@@ -19,28 +19,100 @@
     height: 100vh;
     object-fit: cover;
 }
+
 .effects {
     position: absolute;
     object-fit: cover;
     top: 0;
     left: 0;
-    z-index:-1;
+    z-index: -1;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0, 0, 0, 0.4);
 }
+
 .video-bg__content {
     z-index: -1;
     color: #ffffff;
-    font-size: 50px;
+    font-size: 45px;
+    position: absolute;
+    left: 6%;
+    bottom: 40%;
 
 }
-.main {
-    max-width: 1600px;
-    margin: 0 auto;
-    margin-top: 50px;
-    padding: 0 20px;
+
+
+
+
+.index-body{
+margin-top: 50%;
+width: 100%;
+background: black;
 }
+.index-white-color{
+    color: white;
+}
+
+.index-osnov {
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+    justify-content: center; /* Добавлено для горизонтального центрирования */
+
+}
+
+.index-left {
+    width: 50%;
+}
+
+.index-right {
+    width: 50%;
+}
+
+.index-cards-text {
+margin: 0 auto;
+    border-radius: 20px;
+    padding: 10px;
+    color: white;
+    line-height: 1.7;
+    width: 85%;
+}
+
+.index-cards-photo {
+margin: 0 auto;
+        position: relative;
+        width: 500px; /* Размеры фотографии можно настроить по вашему усмотрению */
+        height: 600px;
+        overflow: hidden;
+        border-radius: 18px;
+    }
+
+    .index-cards-photo img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: all 0.3s;
+        border-radius:18px;
+    }
+
+    .index-cards-photo:hover img {
+        border-radius: 18px;
+
+        transform: scale(1.5);
+    }
+
+    .index-cards-photo .photo-text {
+        position: absolute;
+        bottom: 5%;
+        border-radius: 13px;
+        left: 5%;
+
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        padding: 10px;
+        font-size: 20px;
+    }
+
 
 
 
