--- a/MevetProject/rental_ads/static/rental_ads/css/message_rental.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/message_rental.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   background-color: #F0F2F5;
   padding: 10px;
-  max-height: 500px;
+  height: 500px;
   overflow-y: auto;
   width: 70%;
   margin: 0 auto; /* Выравнивание по центру */
