--- a/MevetProject/rental_ads/static/rental_ads/css/style_menu.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_menu.css
@@ -15,6 +15,7 @@ header {
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(13px);
+    /*border-radius: 0px 0px 8px 8px;*/
     transition: transform 0.3s ease-in-out;
     z-index: 999;
 }
@@ -253,6 +254,21 @@ header {
 
 #blackout-register:target {display: block;}
 
+#scrollToTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  z-index: 9999;
+}
 
 
 
